Week 9 Learn Togehter Fixed Local Storage and Render Output

--- a/w9/index.html
+++ b/w9/index.html
@@ -21,7 +21,7 @@
           <button>Submit</button>
         </label>
         <br />
-        <label> <input type="checkbox" /> Is it Tuesday or Thursday? </label>
+        <label> <input type="checkbox" name="classSchedule" /> Is it Tuesday or Thursday? </label>
       </form>
       <br />
       <div id="error-message"></div>
